--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   weather_icons: ^3.0.0
-
+  http: ^0.13.4
+  provider_architecture:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
